--- a/index.html
+++ b/index.html
@@ -39,3 +39,358 @@
 </body>
 </html>
 <div id="nameTags"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hub System Test</title>
+  <style>
+    body { font-family: sans-serif; padding: 20px; }
+    button { margin: 5px; }
+    #log { margin-top: 20px; white-space: pre-line; border: 1px solid #ccc; padding: 10px; height: 200px; overflow-y: scroll; }
+  </style>
+</head>
+<body>
+  <h1>Hub System Test</h1>
+
+  <input type="text" id="friendName" placeholder="Friend name">
+  <button onclick="addFriend()">Add Friend</button>
+  <br>
+  <button onclick="launchMiniGame()">Launch Mini-Game Solo</button>
+  <button onclick="launchMiniGameWithFriend()">Launch Mini-Game With Friend</button>
+  <br>
+  <input type="text" id="avatarName" placeholder="Avatar name">
+  <button onclick="changeAvatar()">Change Avatar</button>
+
+  <div id="log"></div>
+
+  <script>
+    // ===== HubSystem code =====
+    class HubSystem {
+        constructor(player) {
+            this.player = player;
+            this.friends = [];
+            this.xp = 0;
+            this.miniGames = [];
+            this.currentAvatar = "default";
+        }
+
+        addFriend(friendName) {
+            if (!this.friends.includes(friendName)) {
+                this.friends.push(friendName);
+                this.giveFriendBonus();
+                this.log(`${friendName} added as a friend! Current XP: ${this.xp}`);
+            }
+        }
+
+        giveFriendBonus(amount = 100) { this.xp += amount; }
+
+        getXP() { return this.xp; }
+
+        registerMiniGame(game) { this.miniGames.push(game); }
+
+        launchMiniGame(gameName, playingWithFriend = null) {
+            const game = this.miniGames.find(g => g.name === gameName);
+            if (game) {
+                this.log(`Launching mini-game: ${game.name}`);
+                game.start();
+                if (playingWithFriend && this.friends.includes(playingWithFriend)) {
+                    const bonusXP = 50;
+                    this.giveFriendBonus(bonusXP);
+                    this.log(`Played with friend ${playingWithFriend}, gained ${bonusXP} XP! Total XP: ${this.xp}`);
+                }
+            } else { this.log(`Mini-game ${gameName} not found`); }
+        }
+
+        changeAvatar(avatarName) {
+            this.currentAvatar = avatarName;
+            this.log(`Avatar changed to ${avatarName}`);
+        }
+
+        log(message) {
+            const logDiv = document.getElementById("log");
+            logDiv.textContent += message + "\n";
+            logDiv.scrollTop = logDiv.scrollHeight;
+        }
+    }
+
+    // ===== Usage =====
+    const player = { name: "Player1" };
+    const hub = new HubSystem(player);
+
+    const exampleGame = { name: "FruitCollector", start: function() { hub.log("Mini-game started!"); } };
+    hub.registerMiniGame(exampleGame);
+
+    // Button functions
+    function addFriend() { const name = document.getElementById("friendName").value; if(name) hub.addFriend(name); }
+    function launchMiniGame() { hub.launchMiniGame("FruitCollector"); }
+    function launchMiniGameWithFriend() {
+        const friend = document.getElementById("friendName").value;
+        if(friend) hub.launchMiniGame("FruitCollector", friend);
+    }
+    function changeAvatar() { const avatar = document.getElementById("avatarName").value; if(avatar) hub.changeAvatar(avatar); }
+  </script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>3D Avatar Hub Simulation</title>
+<style>
+  body { font-family: sans-serif; padding: 20px; }
+  #hub { display: flex; gap: 20px; margin-top: 20px; }
+  .player { width: 50px; height: 50px; display: flex; justify-content: center; align-items: center; color: white; font-weight: bold; border-radius: 5px; }
+  button { margin: 5px; }
+  #log { margin-top: 20px; white-space: pre-line; border: 1px solid #ccc; padding: 10px; height: 150px; overflow-y: scroll; }
+</style>
+</head>
+<body>
+<h1>3D Avatar Hub Simulation</h1>
+
+<input type="text" id="friendName" placeholder="Friend name">
+<button onclick="addFriend()">Add Friend</button>
+<br>
+<button onclick="launchMiniGame()">Launch Mini-Game Solo</button>
+<button onclick="launchMiniGameWithFriend()">Launch Mini-Game With Friend</button>
+<br>
+<input type="text" id="avatarName" placeholder="Avatar color (e.g., red, blue)">
+<button onclick="changeAvatar()">Change Avatar</button>
+
+<div id="hub"></div>
+<div id="log"></div>
+
+<script>
+class HubSystem {
+    constructor(player) {
+        this.player = player;
+        this.friends = [];
+        this.xp = 0;
+        this.miniGames = [];
+        this.currentAvatar = "gray";
+        this.updateAvatarDisplay();
+    }
+
+    addFriend(friendName) {
+        if (!this.friends.includes(friendName)) {
+            this.friends.push(friendName);
+            this.giveFriendBonus();
+            this.log(`${friendName} added as a friend! Current XP: ${this.xp}`);
+        }
+    }
+
+    giveFriendBonus(amount = 100) { this.xp += amount; }
+
+    getXP() { return this.xp; }
+
+    registerMiniGame(game) { this.miniGames.push(game); }
+
+    launchMiniGame(gameName, playingWithFriend = null) {
+        const game = this.miniGames.find(g => g.name === gameName);
+        if (game) {
+            this.log(`Launching mini-game: ${game.name}`);
+            game.start();
+            if (playingWithFriend && this.friends.includes(playingWithFriend)) {
+                const bonusXP = 50;
+                this.giveFriendBonus(bonusXP);
+                this.log(`Played with friend ${playingWithFriend}, gained ${bonusXP} XP! Total XP: ${this.xp}`);
+            }
+        } else { this.log(`Mini-game ${gameName} not found`); }
+    }
+
+    changeAvatar(avatarColor) {
+        this.currentAvatar = avatarColor;
+        this.updateAvatarDisplay();
+        this.log(`Avatar changed to ${avatarColor}`);
+    }
+
+    updateAvatarDisplay() {
+        const hubDiv = document.getElementById("hub");
+        hubDiv.innerHTML = '';
+        const playerDiv = document.createElement('div');
+        playerDiv.className = 'player';
+        playerDiv.style.backgroundColor = this.currentAvatar;
+        playerDiv.textContent = this.player.name;
+        hubDiv.appendChild(playerDiv);
+        this.friends.forEach(f => {
+            const fDiv = document.createElement('div');
+            fDiv.className = 'player';
+            fDiv.style.backgroundColor = 'lightblue';
+            fDiv.textContent = f;
+            hubDiv.appendChild(fDiv);
+        });
+    }
+
+    log(message) {
+        const logDiv = document.getElementById("log");
+        logDiv.textContent += message + "\n";
+        logDiv.scrollTop = logDiv.scrollHeight;
+    }
+}
+
+// ===== Usage =====
+const player = { name: "Player1" };
+const hub = new HubSystem(player);
+
+const exampleGame = { name: "FruitCollector", start: function() { hub.log("Mini-game started!"); } };
+hub.registerMiniGame(exampleGame);
+
+// Button functions
+function addFriend() { const name = document.getElementById("friendName").value; if(name) hub.addFriend(name); }
+function launchMiniGame() { hub.launchMiniGame("FruitCollector"); }
+function launchMiniGameWithFriend() { const friend = document.getElementById("friendName").value; if(friend) hub.launchMiniGame("FruitCollector", friend); }
+function changeAvatar() { const color = document.getElementById("avatarName").value; if(color) hub.changeAvatar(color); }
+</script>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Interactive Hub Simulation</title>
+<style>
+  body { font-family: sans-serif; padding: 20px; }
+  #controls { margin-bottom: 10px; }
+  input, select, button { margin: 5px; }
+  #hub { display: flex; flex-wrap: wrap; gap: 15px; margin-top: 20px; }
+  .player { width: 60px; height: 60px; display: flex; justify-content: center; align-items: center; color: white; font-weight: bold; border-radius: 5px; text-align: center; }
+  #log { margin-top: 20px; white-space: pre-line; border: 1px solid #ccc; padding: 10px; height: 200px; overflow-y: scroll; }
+</style>
+</head>
+<body>
+
+<h1>Interactive Hub Simulation</h1>
+
+<div id="controls">
+  <input type="text" id="friendName" placeholder="Friend name">
+  <button onclick="addFriend()">Add Friend</button>
+  <br>
+
+  <select id="avatarShape">
+    <option value="cube">Cube</option>
+    <option value="sphere">Sphere</option>
+    <option value="cylinder">Cylinder</option>
+  </select>
+  <input type="text" id="avatarColor" placeholder="Avatar color (e.g., red, blue)">
+  <button onclick="changeAvatar()">Change Avatar</button>
+  <br>
+
+  <button onclick="launchMiniGame()">Launch Mini-Game Solo</button>
+  <button onclick="launchMiniGameWithFriend()">Launch Mini-Game With Friend</button>
+</div>
+
+<div id="hub"></div>
+<div id="log"></div>
+
+<script>
+class HubSystem {
+    constructor(player) {
+        this.player = player;
+        this.friends = [];
+        this.xp = 0;
+        this.miniGames = [];
+        this.currentAvatar = { color: 'gray', shape: 'cube' };
+        this.updateAvatarDisplay();
+    }
+
+    addFriend(friendName) {
+        if (!this.friends.includes(friendName)) {
+            this.friends.push(friendName);
+            this.giveXP(100);
+            this.log(`${friendName} added as a friend! XP: ${this.xp}`);
+            this.updateAvatarDisplay();
+        }
+    }
+
+    giveXP(amount = 50) { this.xp += amount; }
+
+    registerMiniGame(game) { this.miniGames.push(game); }
+
+    launchMiniGame(gameName, friendName = null) {
+        const game = this.miniGames.find(g => g.name === gameName);
+        if(game) {
+            this.log(`Launching mini-game: ${game.name}`);
+            game.start();
+            this.giveXP(50); // XP for playing mini-game
+            if(friendName && this.friends.includes(friendName)) {
+                this.giveXP(50); // Bonus XP for playing with friend
+                this.log(`Played with friend ${friendName}, bonus XP! Total XP: ${this.xp}`);
+            } else {
+                this.log(`XP after mini-game: ${this.xp}`);
+            }
+        } else {
+            this.log(`Mini-game ${gameName} not found`);
+        }
+    }
+
+    changeAvatar(color, shape) {
+        this.currentAvatar = { color, shape };
+        this.updateAvatarDisplay();
+        this.log(`Avatar changed to ${color} (${shape})`);
+    }
+
+    updateAvatarDisplay() {
+        const hubDiv = document.getElementById("hub");
+        hubDiv.innerHTML = '';
+
+        // Player avatar
+        const pDiv = document.createElement('div');
+        pDiv.className = 'player';
+        pDiv.textContent = this.player.name;
+        pDiv.style.backgroundColor = this.currentAvatar.color;
+        this.applyShape(pDiv, this.currentAvatar.shape);
+        hubDiv.appendChild(pDiv);
+
+        // Friends avatars
+        this.friends.forEach(f => {
+            const fDiv = document.createElement('div');
+            fDiv.className = 'player';
+            fDiv.textContent = f;
+            fDiv.style.backgroundColor = 'lightblue';
+            this.applyShape(fDiv, 'cube'); // friends default to cube
+            hubDiv.appendChild(fDiv);
+        });
+    }
+
+    applyShape(div, shape) {
+        if(shape === 'sphere') {
+            div.style.borderRadius = '50%';
+        } else if(shape === 'cylinder') {
+            div.style.borderRadius = '30% / 50%';
+        } else { // cube
+            div.style.borderRadius = '5px';
+        }
+    }
+
+    log(message) {
+        const logDiv = document.getElementById("log");
+        logDiv.textContent += message + "\n";
+        logDiv.scrollTop = logDiv.scrollHeight;
+    }
+}
+
+// ===== Usage =====
+const player = { name: "Player1" };
+const hub = new HubSystem(player);
+
+// Register example mini-game
+hub.registerMiniGame({ name: "FruitCollector", start: () => { hub.log("Mini-game started!"); } });
+
+// ===== Button functions =====
+function addFriend() {
+    const name = document.getElementById("friendName").value.trim();
+    if(name) hub.addFriend(name);
+}
+function changeAvatar() {
+    const color = document.getElementById("avatarColor").value.trim() || 'gray';
+    const shape = document.getElementById("avatarShape").value;
+    hub.changeAvatar(color, shape);
+}
+function launchMiniGame() { hub.launchMiniGame("FruitCollector"); }
+function launchMiniGameWithFriend() {
+    const friend = document.getElementById("friendName").value.trim();
+    hub.launchMiniGame("FruitCollector", friend || null);
+}
+</script>
+
+</body>
+</html>
